--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
                         <a class="nav-link" href="https://sketchfab.com/fasteng/" target="_blank">Sketchfab</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/" target="_blank" >Spoke</a>
+                        <a class="nav-link" href="https://mozilla.com/spoke/" target="_blank">Spoke</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/" target="_blank" >GitHub</a>
+                        <a class="nav-link" href="https://mozilla.com/hubs" target="_blank" >Hubs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://cad-boxx.com/register.html" target="_blank" >cad-boxx</a>
+                        <a class="nav-link" href="https://cad-boxx.com/register.html" target="_blank" >Register</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://cad-boxx.com/utils.html" target="_blank" >UTILS</a>
