--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <div class="jumbotron text-center"  style="width:100%;margin-bottom:0"><img src="https://cdn.glitch.global/2a3af8bb-e7b2-4e50-8ce2-68e3e8cf4538/1234.JPG?v=1691596484393" />
             <center>
                 <h1>cad-boxx.com</h1>
-                <p>Assembly of 3D Models</p>
+                <p>Assembly of 3D Models with constraints</p>
             </center>
             
         </div>
@@ -190,18 +190,18 @@
         <div class="row">
             <div class="col-sm-4">
                 <h3>Model Library</h3>
-                <p>Our users ave access tp hundreds of high-quality parametric models for use in their work.</p>
-                <p></p>
+                <p>Our users ave access tp thousands of high-quality parametric models for use in their work.</p>
+                <p>Use in combination with Sketchfab and Hubs. Apply textures dynamically in real time.</p>
             </div>
             <div class="col-sm-4">
                 <h3>Assemble/Connect 2</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+                <p>Create dynamic joints which connect the models. Inspect their movement on screen.</p>
+                <p>Adjust the properties of the joints easily and refine your design to suit performance.</p>
             </div>
             <div class="col-sm-4">
                 <h3>Animations/Simulations</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+                <p>Create stunning animations whilst moving around inside your environment in Virtual Reality.</p>
+                <p>Capture unique 3D models with a single click as the animation runs</p>
             </div>
         </div>
     </div>
