--- a/index.html
+++ b/index.html
@@ -255,22 +255,42 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-sm-4">
-            <h3>3D MODELS</h3>
-            <p>All our models are hosted on Skethfab.com and can be placed into an app with a single click.</p>
-            <p>Users have the choice of downloading the model or placing it into a networked app.</p>
+            <div class="paymeent-areao">
+                <script src="https://www.paypal.com/sdk/js?client-id=BAATE0KpDIzTsGpwIPcN7j-BDwNcvKxBKnGJccDUwrSBIGjrVS9cmPuVjeGIoiNBqIISySa39KUwhFAHGQ&components=hosted-buttons&disable-funding=venmo&currency=GBP"></script>
+                <div id="paypal-container-QZ9CTK4NXAH3L"></div>
+                <script>
+                  paypal.HostedButtons({
+                    hostedButtonId: "QZ9CTK4NXAH3L",
+                  }).render("#paypal-container-QZ9CTK4NXAH3L")
+                </script>
+             </div>
         </div>
         <div class="col-sm-4">
-            <h3>CADBOXX APP 2</h3>
-            <p>The cadboxx app assembles 3D Models and connects them with dynamic joints.</p>
-            <p>Users can  download unlimited assemblies and joints for use in their work..</p>
+            <div class="paymeent-areao">
+                <script src="https://www.paypal.com/sdk/js?client-id=BAATE0KpDIzTsGpwIPcN7j-BDwNcvKxBKnGJccDUwrSBIGjrVS9cmPuVjeGIoiNBqIISySa39KUwhFAHGQ&components=hosted-buttons&disable-funding=venmo&currency=GBP"></script>
+                <div id="paypal-container-QZ9CTK4NXAH3L"></div>
+                <script>
+                  paypal.HostedButtons({
+                    hostedButtonId: "QZ9CTK4NXAH3L",
+                  }).render("#paypal-container-QZ9CTK4NXAH3L")
+                </script>
+             </div>
         </div>
         <div class="col-sm-4">
-            <h3>ALL THINGS 3D</h3>
-            <p>We create everything ourselves and pass the savings on to our customers.  ipsum dolor sit amet, consectetur adipisicing elit...</p>
-            <p>We sell Toys, Games, VR Experiences and basically anything 3D.</p>
+            <div class="paymeent-areao">
+                <script src="https://www.paypal.com/sdk/js?client-id=BAATE0KpDIzTsGpwIPcN7j-BDwNcvKxBKnGJccDUwrSBIGjrVS9cmPuVjeGIoiNBqIISySa39KUwhFAHGQ&components=hosted-buttons&disable-funding=venmo&currency=GBP"></script>
+                <div id="paypal-container-QZ9CTK4NXAH3L"></div>
+                <script>
+                  paypal.HostedButtons({
+                    hostedButtonId: "QZ9CTK4NXAH3L",
+                  }).render("#paypal-container-QZ9CTK4NXAH3L")
+                </script>
+             </div>
         </div>
     </div>
 </div>
 
 </body>
 </html>
+
+
