--- a/index.html
+++ b/index.html
@@ -196,9 +196,6 @@
 
 
 <div class="container mt-5">
-
-
-    <div class="r
     <div class="row">       
         <div class="col-sm-4">
             <div class="paymeent-areao">
@@ -211,7 +208,7 @@
                 </script>
              </div>
         </div>
-    </div>ow">       
+    </div>       
         <div class="col-sm-4">
             <div class="paymeent-areao">
                 <script src="https://www.paypal.com/sdk/js?client-id=BAATE0KpDIzTsGpwIPcN7j-BDwNcvKxBKnGJccDUwrSBIGjrVS9cmPuVjeGIoiNBqIISySa39KUwhFAHGQ&components=hosted-buttons&disable-funding=venmo&currency=GBP"></script>
