--- a/index.html
+++ b/index.html
@@ -208,36 +208,33 @@
                 </script>
              </div>
         </div>
+        
     </div>       
-        <div class="col-sm-4">
-            <div class="paymeent-areao">
-                <script src="https://www.paypal.com/sdk/js?client-id=BAATE0KpDIzTsGpwIPcN7j-BDwNcvKxBKnGJccDUwrSBIGjrVS9cmPuVjeGIoiNBqIISySa39KUwhFAHGQ&components=hosted-buttons&disable-funding=venmo&currency=GBP"></script>
-                <div id="paypal-container-QZ9CTK4NXAH3L"></div>
-                <script>
-                  paypal.HostedButtons({
-                    hostedButtonId: "QZ9CTK4NXAH3L",
-                  }).render("#paypal-container-QZ9CTK4NXAH3L")
-                </script>
-             </div>
-        </div>
-    </div>
-    <div class="row">       
-        <div class="col-sm-4">
-            <div class="paymeent-areao">
-                <script src="https://www.paypal.com/sdk/js?client-id=BAATE0KpDIzTsGpwIPcN7j-BDwNcvKxBKnGJccDUwrSBIGjrVS9cmPuVjeGIoiNBqIISySa39KUwhFAHGQ&components=hosted-buttons&disable-funding=venmo&currency=GBP"></script>
-                <div id="paypal-container-QZ9CTK4NXAH3L"></div>
-                <script>
-                  paypal.HostedButtons({
-                    hostedButtonId: "QZ9CTK4NXAH3L",
-                  }).render("#paypal-container-QZ9CTK4NXAH3L")
-                </script>
-             </div>
-        </div>
-    </div>
-</div>
     
-    <div class="row">       
-        <div class="col-sm-4">
+    <div class="row" width="(5%">  
+        <div class="col-sm-4"width="30%"  >
+            <div class="paymeent-areao">
+                <script src="https://www.paypal.com/sdk/js?client-id=BAATE0KpDIzTsGpwIPcN7j-BDwNcvKxBKnGJccDUwrSBIGjrVS9cmPuVjeGIoiNBqIISySa39KUwhFAHGQ&components=hosted-buttons&disable-funding=venmo&currency=GBP"></script>
+                <div id="paypal-container-QZ9CTK4NXAH3L"></div>
+                <script>
+                  paypal.HostedButtons({
+                    hostedButtonId: "QZ9CTK4NXAH3L",
+                  }).render("#paypal-container-QZ9CTK4NXAH3L")
+                </script>
+             </div>
+        </div>
+        <div class="col-sm-4"width="30%"  >
+            <div class="paymeent-areao">
+                <script src="https://www.paypal.com/sdk/js?client-id=BAATE0KpDIzTsGpwIPcN7j-BDwNcvKxBKnGJccDUwrSBIGjrVS9cmPuVjeGIoiNBqIISySa39KUwhFAHGQ&components=hosted-buttons&disable-funding=venmo&currency=GBP"></script>
+                <div id="paypal-container-QZ9CTK4NXAH3L"></div>
+                <script>
+                  paypal.HostedButtons({
+                    hostedButtonId: "QZ9CTK4NXAH3L",
+                  }).render("#paypal-container-QZ9CTK4NXAH3L")
+                </script>
+             </div>
+        </div>
+        <div class="col-sm-4"width="30%"  >
             <div class="paymeent-areao">
                 <script src="https://www.paypal.com/sdk/js?client-id=BAATE0KpDIzTsGpwIPcN7j-BDwNcvKxBKnGJccDUwrSBIGjrVS9cmPuVjeGIoiNBqIISySa39KUwhFAHGQ&components=hosted-buttons&disable-funding=venmo&currency=GBP"></script>
                 <div id="paypal-container-QZ9CTK4NXAH3L"></div>
